@@ -4,6 +4,7 @@ X-editable-yii changelog
 
 Version 1.1.0  wip
 ----------------------------
+[enh #5] source as array is always data, not Yii route (vitalets)
 [enh #9] support for namespaced models (vitalets)
 [enh] updated to x-editable 1.4.4: added combodate and select2 (vitalets)
 [enh #16] EditableDetailView defaults + french translation (mdeweerd) 
